<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/alarmFragment"
        android:icon="@drawable/ic_alarm_selector"
        android:title="@string/alarmHome"/>
    <item
        android:id="@+id/clockFragment"
        android:icon="@drawable/ic_clock_selector"
        android:title="@string/clockHome"/>
    <item
        android:id="@+id/stopwatchFragment"
        android:icon="@drawable/ic_stopwatch_selector"
        android:title="@string/stopwatchHome"/>
    <item
        android:id="@+id/timerFragment"
        android:icon="@drawable/ic_timer_selector"
        android:title="@string/timerHome"/>
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_setting_selector"
        android:title="@string/settingsHome"/>
</menu>