<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    >

    <ImageView
        android:id="@+id/imgIntro"
        android:layout_width="328dp"
        android:layout_height="328dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_clock"
        android:contentDescription="@string/app_name"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="#252525"
        android:layout_marginTop="24dp"
        android:text="@string/welcome_to"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:text="@string/title" />

    <TextView
        android:id="@+id/tvContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@android:color/darker_gray"
        android:layout_marginTop="7dp"
        android:text="@string/description_here"
        android:layout_marginHorizontal="40dp"
        android:textAlignment="center" />
</LinearLayout>