<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="240dp"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="50dp"
    android:background="@drawable/bg_dialog_rounded"
    android:orientation="vertical"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/robotomedium"
        android:text="@string/delete"
        android:textColor="#F44336"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/do_you_want_to_delete_nthis_alarm"
        android:textColor="#757575"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="#E0E0E0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnNo"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/robotomedium"
            android:gravity="center"
            android:text="@string/no"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#E0E0E0" />

        <TextView
            android:id="@+id/btnYes"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/robotomedium"
            android:gravity="center"
            android:text="@string/yes"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>