<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/custom_bottom_navigation"
        app:layout_constraintStart_toStartOf="parent"
        app:navGraph="@navigation/nav_graph" />

    <LinearLayout
        android:id="@+id/custom_bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal"
        android:background="#76E0C1"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/nav_alarm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/alarm_icon_container"
                android:layout_width="48dp"
                android:layout_height="26dp"
                android:background="@drawable/selected_nav_background">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_alarm_selector"
                    android:contentDescription="@string/alarm"
                    app:tint="#FFFFFF"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alarmHome"
                android:textSize="12sp"
                android:textColor="#FFFFFF"
                android:layout_marginTop="4dp"
                android:singleLine="true"
                android:gravity="center"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                />

        </LinearLayout>

<!--        <LinearLayout-->
<!--            android:id="@+id/nav_clock"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_weight="1"-->
<!--            android:orientation="vertical"-->
<!--            android:gravity="center"-->
<!--            android:clickable="true"-->
<!--            android:focusable="true">-->

<!--            <androidx.constraintlayout.widget.ConstraintLayout-->
<!--                android:id="@+id/clock_icon_container"-->
<!--                android:layout_width="48dp"-->
<!--                android:layout_height="26dp"-->
<!--                android:background="@drawable/selected_nav_background">-->

<!--                <ImageView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:src="@drawable/ic_clock_selector"-->
<!--                    android:contentDescription="@string/clock"-->
<!--                    android:layout_gravity="center"-->
<!--                    app:tint="#FFFFFF"-->
<!--                    android:layout_margin="8dp"-->
<!--                    app:layout_constraintTop_toTopOf="parent"-->
<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"/>-->

<!--            </androidx.constraintlayout.widget.ConstraintLayout>-->


<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/clockHome"-->
<!--                android:textSize="12sp"-->
<!--                android:gravity="center"-->
<!--                android:textColor="#FFFFFF"-->
<!--                android:layout_marginTop="4dp"-->
<!--                android:singleLine="true"-->
<!--                android:ellipsize="marquee"-->
<!--                android:marqueeRepeatLimit="marquee_forever"-->
<!--                />-->

<!--        </LinearLayout>-->

        <LinearLayout
            android:id="@+id/nav_stopwatch"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"

            android:clickable="true"
            android:focusable="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/stopwatch_icon_container"
                android:layout_width="48dp"
                android:layout_height="26dp"
                android:background="@drawable/selected_nav_background">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_stopwatch_selector"
                    android:contentDescription="@string/stopwatch"
                    app:tint="#FFFFFF"
                    android:layout_gravity="center"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_margin="8dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stopwatchHome"
                android:textSize="12sp"
                android:textColor="#FFFFFF"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_timer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/timer_icon_container"
                android:layout_width="48dp"
                android:layout_height="26dp"
                android:background="@drawable/selected_nav_background">

                <ImageView
                    android:id="@+id/timer_icon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/timer"
                    android:src="@drawable/ic_timer_selector"
                    app:tint="#76E0C1"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/timerHome"
                android:textSize="12sp"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_settings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/settings_icon_container"
                android:layout_width="48dp"
                android:layout_height="26dp"
                android:background="@drawable/selected_nav_background">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:scaleType="fitXY"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_setting_selector"
                    android:contentDescription="@string/settings"
                    app:tint="#FFFFFF"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_margin="8dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settingsHome"
                android:textSize="12sp"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:layout_marginTop="4dp" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>